kubernetes-deploy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: botanical
  labels:
    name: botanical
    # Label for standard Pod Security Admission (baseline or restricted)
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
