kubernetes-deploy/portal-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-portal
  namespace: botanical
spec:
  selector:
    app: nginx-portal
  ports:
    - protocol: TCP
      port: 443
      targetPort: 8443
  type: ClusterIP
